--- a/META.yml
+++ b/META.yml
@@ -1,37 +1,41 @@
 ---
-name: CPAN-Mini-Devel-Recent
-version: 0.01
+abstract: 'Create CPAN::Mini mirror with recent developer releases'
 author:
-  - 'David A. Golden <dagolden@cpan.org>'
-abstract: Create CPAN::Mini mirror with recent developer releases
-license: apache
-resources:
-  license: http://www.apache.org/licenses/LICENSE-2.0.txt
-  repository: http://dagolden.googlecode.com/svn/
+  - 'David Golden <dagolden@cpan.org>'
 build_requires:
+  File::Find: 0
   Test::More: 0.62
+configure_requires:
+  ExtUtils::MakeMaker: 6.31
+dynamic_config: 0
+generated_by: 'Dist::Zilla version 4.101900, CPAN::Meta::Converter version 2.101670'
+license: apache
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: CPAN-Mini-Devel-Recent
+no_index:
+  directory:
+    - t
+    - xt
+    - examples
+    - corpus
+provides:
+  CPAN::Mini::Devel::Recent:
+    file: lib/CPAN/Mini/Devel/Recent.pm
+    version: 0.05
 requires:
   CPAN: 1.92
   CPAN::HandleConfig: 0
   CPAN::Mini: 0.567
   CPAN::Tarzip: 0
+  Config: 0
   File::Basename: 0
   File::Path: 0
   File::Spec: 3.27
-  File::Temp: 0.2
+  File::Temp: 0.20
   YAML::Syck: 1.07
   perl: 5.006
-configure_requires:
-  Module::Build: 0.3305
-provides:
-  CPAN::Mini::Devel::Recent:
-    file: lib/CPAN/Mini/Devel/Recent.pm
-    version: 0.01
-generated_by: Module::Build version 0.3305
-meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
-no_index:
-  directory:
-    - examples
-    - inc
+resources:
+  repository: http://github.com/dagolden/cpan-mini-devel-recent
+version: 0.05
